--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ language: go
 
 go:
 - 1.7
+- 1.8
 - tip
 
-script: go test ./{cluster,manifest}
+before_install:
+- go get github.com/mattn/goveralls
+
+script:
+- goveralls -service=travis-ci
